@@ -9,105 +9,57 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 
 public class ProcessUtils {
-    private static final Logger logger = LoggerFactory.getLogger(ProcessUtils.class);
+    private static final String OS = System.getProperty("os.name").toLowerCase();
 
-    private static final String osName = System.getProperty("os.name").toLowerCase();
+    private ProcessUtils() {
+    }
 
-    public static String executeCommand(String cmd) throws BusinessException {
-        if (StringTools.isEmpty(cmd)) {
-            return null;
-        }
+    /**
+     * 执行命令，无需返回值。
+     */
+    public static void executeCommand(String command) {
+        executeCommandWithResult(command);
+    }
 
-        Runtime runtime = Runtime.getRuntime();
-        Process process = null;
+    /**
+     * 执行命令并返回标准输出内容（包含错误输出）。
+     */
+    public static String executeCommandWithResult(String command) {
         try {
-            //判断操作系统
-            if (osName.contains("win")) {
-                process = Runtime.getRuntime().exec(cmd);
-            } else {
-                process = Runtime.getRuntime().exec(new String[]{"/bin/sh", "-c", cmd});
+            Process process = new ProcessBuilder(buildShell(command))
+                    .redirectErrorStream(true)
+                    .start();
+
+            String output = read(process.getInputStream());
+            int exitCode = process.waitFor();
+            if (exitCode != 0) {
+                throw new RuntimeException("执行命令失败：" + command + "，输出：" + output);
             }
-            // 执行ffmpeg指令
-            // 取出输出流和错误流的信息
-            // 注意：必须要取出ffmpeg在执行命令过程中产生的输出信息，如果不取的话当输出流信息填满jvm存储输出留信息的缓冲区时，线程就回阻塞住
-            PrintStream errorStream = new PrintStream(process.getErrorStream());
-            PrintStream inputStream = new PrintStream(process.getInputStream());
-            errorStream.start();
-            inputStream.start();
-            // 等待ffmpeg命令执行完
-            process.waitFor();
-            // 获取执行结果字符串
-            String result = errorStream.stringBuffer.append(inputStream.stringBuffer + "\n").toString();
-            // 输出执行的命令信息
-            logger.info("执行命令{}结果{}", cmd, result);
-            return result;
-        } catch (Exception e) {
-            logger.error("执行命令失败cmd{}失败:{} ", cmd, e.getMessage());
-            throw new BusinessException("视频转换失败");
-        } finally {
-            if (null != process) {
-                ProcessKiller ffmpegKiller = new ProcessKiller(process);
-                runtime.addShutdownHook(ffmpegKiller);
-            }
+            return output;
+        } catch (IOException | InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new RuntimeException("执行命令异常：" + command, e);
         }
     }
 
-    /**
-     * 在程序退出前结束已有的FFmpeg进程
-     */
-    private static class ProcessKiller extends Thread {
-        private Process process;
-
-        public ProcessKiller(Process process) {
-            this.process = process;
+    private static String[] buildShell(String command) {
+        if (OS.contains("win")) {
+            return new String[]{"cmd.exe", "/c", command};
         }
-
-        @Override
-        public void run() {
-            this.process.destroy();
-        }
+        return new String[]{"/bin/bash", "-c", command};
     }
 
-
-    /**
-     * 用于取出ffmpeg线程执行过程中产生的各种输出和错误流的信息
-     */
-    static class PrintStream extends Thread {
-        InputStream inputStream = null;
-        BufferedReader bufferedReader = null;
-        StringBuffer stringBuffer = new StringBuffer();
-
-        public PrintStream(InputStream inputStream) {
-            this.inputStream = inputStream;
-        }
-
-        @Override
-        public void run() {
-            try {
-                if (null == inputStream) {
-                    return;
-                }
-                bufferedReader = new BufferedReader(new InputStreamReader(inputStream));
-                String line = null;
-                while ((line = bufferedReader.readLine()) != null) {
-                    stringBuffer.append(line);
-                }
-            } catch (Exception e) {
-                logger.error("读取输入流出错了！错误信息：" + e.getMessage());
-            } finally {
-                try {
-                    if (null != bufferedReader) {
-                        bufferedReader.close();
-                    }
-                    if (null != inputStream) {
-                        inputStream.close();
-                    }
-                } catch (IOException e) {
-                    logger.error("调用PrintStream读取输出流后，关闭流时出错！");
-                }
+    private static String read(InputStream inputStream) throws IOException {
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8))) {
+            StringBuilder sb = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                sb.append(line).append(System.lineSeparator());
             }
+            return sb.toString().trim();
         }
     }
 }
